--- a/package.json
+++ b/package.json
@@ -6,14 +6,18 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "update-data": "node updateData.mjs"
   },
   "dependencies": {
+    "axios": "^1.7.2",
     "graphql-request": "^7.0.1",
     "next": "14.2.3",
     "node-fetch": "^3.3.2",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-table": "^7.8.0",
+    "recharts": "^2.12.7"
   },
   "devDependencies": {
     "@types/node": "^20",
