--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-table": "^7.8.0",
+    "react-tabs": "^6.0.2",
     "recharts": "^2.12.7"
   },
   "devDependencies": {
