--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "axios": "^1.7.2",
     "graphql-request": "^7.0.1",
+    "highcharts": "^11.4.3",
+    "highcharts-react-official": "^3.2.1",
     "next": "14.2.3",
     "node-fetch": "^3.3.2",
     "react": "^18",
