--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
+    "start": "node updateData.mjs && next start",
     "lint": "next lint",
     "update-data": "node updateData.mjs"
   },
